--- a/Infrastructure Deployment/Ansible/delete-vm.yml
+++ b/Infrastructure Deployment/Ansible/delete-vm.yml
@@ -18,5 +18,5 @@
     azure_rm_virtualmachine:
       resource_group: "{{ resource_group }}"
       name: "{{ instance_name }}-vm"
-      remove_on_absent: network_interfaces, virtual_storage
+      remove_on_absent: "{{ instance_name }}-nic", "{{ instance_name }}-security-group"
       state: absent
