--- a/Infrastructure Deployment/Ansible/create-vm.yml
+++ b/Infrastructure Deployment/Ansible/create-vm.yml
@@ -72,6 +72,7 @@
           access: Allow
           priority: 1002
           direction: Inbound
+      when: "{{ instance_name }}" == "Minecraft"
   - name: Create virtual network interface card
     azure_rm_networkinterface:
       resource_group: "{{ resource_group }}"
