--- a/Playbooks/ApacheServer/install-apache.yml
+++ b/Playbooks/ApacheServer/install-apache.yml
@@ -17,6 +17,8 @@
 
   handlers:
     - name: start apache
+      become: yes
+      become_user: root
       service: 
         name: "httpd"
         state: started
