Added "become" to the playbook

--- a/Infrastructure Deployment/Ansible/open-ports.yml
+++ b/Infrastructure Deployment/Ansible/open-ports.yml
@@ -16,6 +16,7 @@
 # Adding security group rules.
 # These rules allows you to open particular ports on the VM
   - name: Create Network Security Group that allows SSH
+    become: yes
     azure_rm_securitygroup:
       resource_group: "{{ resource_group }}"
       name: "{{ instance_name }}-security-group"
@@ -29,6 +30,7 @@
     tags:
     - SSH
   - name: Create Network Security Group that allows SSH
+    become: yes
     azure_rm_securitygroup:
       resource_group: "{{ resource_group }}"
       name: "{{ instance_name }}-security-group"
@@ -50,6 +52,7 @@
     - Port_80
   #If the server is a minecraft server open port - GC
   - name: Open port for minecraft
+    become: yes
     azure_rm_securitygroup:
       resource_group: "{{ resource_group }}"
       name: "{{ instance_name }}-security-group"
