--- a/Playbooks/mongodb/install-mongodb.yml
+++ b/Playbooks/mongodb/install-mongodb.yml
@@ -19,6 +19,8 @@
         name:
           - gcc
           - python-devel
+          - build-essential
+          - python-dev
     - name: Installing PyMongo
       raw: sudo easy_install pip
     - name: MONGOD | Create admin user
