--- a/Playbooks/mongodb/install-mongodb.yml
+++ b/Playbooks/mongodb/install-mongodb.yml
@@ -20,6 +20,12 @@
           - gcc
           - python-devel
           - python-dev
+          - epel-release
+    - name: Update packages
+      yum:
+        state: latest
+        name:
+          - *
     - name: Installing PyMongo
       raw: sudo easy_install pip
     - name: MONGOD | Create admin user
