--- a/Playbooks/mongodb/install-mongodb.yml
+++ b/Playbooks/mongodb/install-mongodb.yml
@@ -24,8 +24,7 @@
     - name: Update packages
       yum:
         state: latest
-        name:
-          - *
+        name: *
     - name: Installing PyMongo
       raw: sudo easy_install pip
     - name: MONGOD | Create admin user
