--- a/Playbooks/Minecraft/minecraftUninstall.yml
+++ b/Playbooks/Minecraft/minecraftUninstall.yml
@@ -5,9 +5,11 @@
     tasks:
       - name: Checking if I can connect to the server.
         ping:
-      - name: "Removeing Minecraft files from VM3"
-        copy: src="remove.py" dest="/home/vm3"
-      - name: Remove files from 
-        script: "download.py"
-        args:
-          executable: python3
+      - name: Removing files
+        raw: rm 
+      #- name: "Removeing Minecraft files from VM3"
+      #  copy: src="remove.py" dest="/home/vm3"
+      #- name: Remove files from 
+        #script: "download.py"
+        #args:
+        #executable: python3
