--- a/Playbooks/mongodb/install-mongodb.yml
+++ b/Playbooks/mongodb/install-mongodb.yml
@@ -13,6 +13,8 @@
         state: latest
       notify:
         - start MongoDB
+    - name: Updating packages
+      yum: name=* state=latest
     - name: Installing required dependencies
       yum:
         state: present
@@ -20,8 +22,6 @@
           - gcc
           - epel-release
           - python-pip
-    #- name: Update packages
-      #yum: name=* state=latest
     - name: Installing the latest pymongo
       pip: name=pymongo state=latest use_mirrors=no
     - name: MONGOD | Create admin user
