--- a/Playbooks/Minecraft/minecraftUninstall.yml
+++ b/Playbooks/Minecraft/minecraftUninstall.yml
@@ -5,11 +5,5 @@
     tasks:
       - name: Checking if I can connect to the server.
         ping:
-      - name: Removing files
-        raw: rm 
-      #- name: "Removeing Minecraft files from VM3"
-      #  copy: src="remove.py" dest="/home/vm3"
-      #- name: Remove files from 
-        #script: "download.py"
-        #args:
-        #executable: python3
+      - name: Removing minecraft files
+        raw: cd /home/vmadmin; rm -fr *
