--- a/Infrastructure Deployment/Ansible/create-vm-windows.yml
+++ b/Infrastructure Deployment/Ansible/create-vm-windows.yml
@@ -58,7 +58,10 @@
       rules:
         - name: SSH
           protocol: Tcp
-          destination_port_range: 22
+          destination_port_range:
+            - 22
+            - 3389
+            - 8200
           access: Allow
           priority: 1001
           direction: Inbound
