--- a/Playbooks/ApacheServer/install-apache.yml
+++ b/Playbooks/ApacheServer/install-apache.yml
@@ -6,6 +6,8 @@
     yum: pkg=httpd state=latest
     become: yes
     become_user: root
+  - name: Copy splash page
+    copy: src=temp-homepage.html dest=/var/www/html
     notify:
     - start apache
   - name: Enabling it on System boot
