--- a/Playbooks/ApacheServer/install-apache.yml
+++ b/Playbooks/ApacheServer/install-apache.yml
@@ -7,7 +7,7 @@
     become: yes
     become_user: root
   - name: Copy splash page
-    copy: src=temp-homepage.html dest=/var/www/html
+    copy: src=index.html dest=/var/www/html
     become: yes
     become_user: root
     notify:
